<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/detail_Fragment"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">

    <FrameLayout
        android:id="@+id/backdrop_layout"
...
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/title_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/ratingbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RatingBar
        android:id="@+id/ratingbar_detail"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:progressTint="@color/yellow"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/genre_year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/rating_text"
        app:layout_constraintStart_toEndOf="@id/ratingbar_detail"
        app:layout_constraintTop_toTopOf="@id/ratingbar_detail"
        app:layout_constraintBottom_toBottomOf="@id/ratingbar_detail"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
...
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/backdrop_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/description_text"
        app:layout_constraintTop_toBottomOf="@id/backdrop_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/fav_button"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
...
