<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="trending_now">Trending Now</string>
    <string name="top_rate_tvshow">Top Rate Tv Show</string>
    <string name="latest_tvshow">Latest Tv Show</string>
    <string name="image_banner">image banner</string>
    <string name="genre_year">%s, %s</string>
    <string name="poster">Poster</string>
    <string name="rating">Rating</string>
    <string name="nflx">NFLX</string>
    <string name="favorite">Favorite</string>
    <string name="back">Back</string>
</resources>