<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:id="@+id/appbar_home"
        android:layout_width="match_parent"
        android:layout_height="350dp">
        <TextView
            android:id="@+id/popular_text"
            android:textSize="20sp"
            android:padding="16dp"
            android:textStyle="bold"
            app:layout_scrollFlags="scroll"
            android:text="@string/trending_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/rv_banner_popular"
            app:layout_scrollFlags="scroll"
            app:layout_constraintTop_toBottomOf="@id/popular_text"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/rv_banner_popular"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>