<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home_fragment"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        app:title="NFLX"
        app:titleTextColor="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>